--- a/audio-catalog/styles/index.css
+++ b/audio-catalog/styles/index.css
@@ -21,6 +21,7 @@ html {
   max-width: 768px;
   width: 100%;
   margin: 0 auto;
+  padding: 0 30px;
 }
 
 /* /Container */
@@ -37,19 +38,31 @@ html {
 }
 
 .release {
-  border: 2px solid var(--color-dark);
-  padding: 22px;
+  border: 1px solid var(--color-border);
+  padding: 16px;
+  border-radius: 10px;
+}
+
+.release__img {
+  width: 100%;
+  border-radius: 15px;
 }
 
 .release__name {
   margin: 0;
   padding: 0;
+  margin-top: 9px;
   font-weight: 700;
   font-size: 15px;
 }
 
-.release__img {
-  width: 100%;
+.release__artist {
+  margin: 0;
+  padding: 0;
+  margin-top: 8px;
+  font-weight: 900;
+  font-size: 12px;
+  color: var(--color-secondary);
 }
 
 @media (max-width: 768px) {
