--- a/audio-catalog/styles/navbar.css
+++ b/audio-catalog/styles/navbar.css
@@ -11,6 +11,7 @@
   padding: 0;
   margin: 0;
   display: flex;
+  align-items: center;
 }
 
 .nav__item {
@@ -32,7 +33,24 @@
   color: inherit;
 }
 
-@media (max-width: 414px) {
+.nav__item_user {
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+}
+
+.user__name {
+  margin-right: 6px;
+}
+
+.user__icon {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  border: 2px solid var(--color-border);
+}
+
+@media (max-width: 540px) {
   .nav {
     position: relative;
     display: flex;
@@ -55,6 +73,7 @@
     padding: 11px 37px;
     border: 1px solid var(--color-border);
     border-radius: 10px;
+    background-color: #fff;
   }
 
   .nav__menu_open {
