--- a/audio-catalog/styles/index.css
+++ b/audio-catalog/styles/index.css
@@ -15,6 +15,62 @@ html {
   color: var(--color-dark);
 }
 
+/* Navbar */
+
+.nav {
+  padding: 28px 0;
+}
+
+.nav__toggler {
+  display: none;
+}
+
+.nav__menu {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  align-items: center;
+}
+
+.nav__item {
+  color: var(--color-secondary);
+  font-weight: 900;
+}
+
+.nav__item:not(:last-child) {
+  margin-right: 22px;
+}
+
+.nav__item_active,
+.nav__item:hover {
+  color: var(--color-dark);
+}
+
+.nav__link {
+  text-decoration: none;
+  color: inherit;
+}
+
+.nav__item_user {
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+}
+
+.user__name {
+  margin-right: 6px;
+}
+
+.user__icon {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  border: 2px solid var(--color-border);
+}
+
+/* ./Navbar */
+
 /* Container */
 
 .container {
@@ -24,55 +80,54 @@ html {
   padding: 0 30px;
 }
 
-/* /Container */
+/* ./Container */
 
-.releases {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  column-gap: 20px;
-  row-gap: 30px;
-}
-
-.release {
-  border: 1px solid var(--color-border);
-  padding: 16px;
-  border-radius: 10px;
-}
-
-.release__img {
-  width: 100%;
-  border-radius: 15px;
-}
-
-.release__name {
-  margin: 0;
-  padding: 0;
-  margin-top: 9px;
-  font-weight: 700;
-  font-size: 15px;
-}
-
-.release__artist {
-  margin: 0;
-  padding: 0;
-  margin-top: 8px;
-  font-weight: 900;
-  font-size: 12px;
-  color: var(--color-secondary);
-}
-
-@media (max-width: 768px) {
-  .releases {
-    grid-template-columns: repeat(2, 1fr);
+@media (max-width: 540px) {
+  .nav {
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
   }
-}
 
-@media (max-width: 414px) {
-  .releases {
-    grid-template-columns: repeat(1, 1fr);
+  .nav__toggler {
+    display: block;
+    border: none;
+    background: none;
+    cursor: pointer;
+  }
+
+  .nav__menu {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    right: 0;
+    top: 100%;
+    padding: 11px 37px;
+    border: 1px solid var(--color-border);
+    border-radius: 10px;
+    background-color: #fff;
+  }
+
+  .nav__menu_open {
+    display: flex;
+  }
+
+  .nav__item:not(:last-child) {
+    margin-right: 0;
+    margin-bottom: 22px;
+  }
+
+  .dimmer {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(45, 45, 45, 0.35);
+    display: none;
+  }
+
+  .dimmer_active {
+    display: block;
   }
 }
