--- a/audio-catalog/styles/search.css
+++ b/audio-catalog/styles/search.css
@@ -1,3 +1,83 @@
-body {
-  background-color: var(--color-dark);
+.searchbar {
+  position: relative;
+}
+
+.searchbar__input {
+  border: 1px solid var(--color-border);
+  border-radius: 10px;
+
+  padding: 16px 14px;
+  width: 100%;
+
+  font-size: 16px;
+}
+
+.searchbar__input::placeholder {
+  color: var(--color-disabled);
+}
+
+.searchbar__btn {
+  position: absolute;
+  right: 14px;
+  top: 0;
+  bottom: 0;
+
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.types-list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 132px;
+  column-gap: 12px;
+  row-gap: 18px;
+  margin-top: 18px;
+}
+
+.type {
+  position: relative;
+  box-shadow: 0 1px 7px 0 rgba(0, 0, 0, 0.05);
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.type_active {
+  border-radius: 10px;
+}
+
+.type__btn {
+  display: block;
+  width: 100%;
+  height: 100%;
+  border: none;
+  background: #fff;
+  cursor: pointer;
+}
+
+.type__text {
+  font-weight: 700;
+  font-size: 24px;
+}
+
+.type__overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  display: none;
+  border-radius: 10px;
+  border: 5px solid var(--color-accent);
+}
+
+.type__check-icon {
+  position: absolute;
+  top: -1px;
+  right: -1px;
+}
+
+.type_active .type__overlay {
+  display: block;
 }
